Fix minor image alignment issue

--- a/index.css
+++ b/index.css
@@ -35,6 +35,10 @@ img {
     padding: 0px 4px;
 }
 
+.links img {
+    vertical-align: middle;
+}
+
 .nav-bar {
     border: 1px solid black;
 }
